# voyager

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  OWNERS.md  README.md  asv.conf.json
.github/: pull_request_template.md
.github/workflows/: all.yml  npm_publish.yml
benchmarks/: index_creation.py  index_query.py
cpp/: .clang-format  .gitignore  CMakeLists.txt  E4M3.h  Enums.h  Index.h  Makefile  Metadata.h  ReadWriteLock.h  StreamUtils.h  TypedIndex.h  array_utils.h  hnswalg.h  hnswlib.h  std_utils.h  visited_list_pool.h
cpp/Spaces/: Cosine.h  Euclidean.h  InnerProduct.h  Space.h
cpp/include/: CMakeLists.txt
cpp/src/: CMakeLists.txt  E4M3.h  Enums.h  HashBiMap.h  Index.h  Makefile  Metadata.h  StreamUtils.h  TypedIndex.h  array_utils.h  cmake_install.cmake  hnswalg.h  hnswlib.h  std_utils.h  visited_list_pool.h
cpp/src/Spaces/: Euclidean.h  InnerProduct.h  Space.h
cpp/test/: .gitignore  CMakeLists.txt  test_HashBiMap.cpp  test_main.cpp  test_utils.cpp
docs/: _index.html  index.html
docs/java/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  javadoc.sh  member-search-index.js  options  overview-frame.html  overview-summary.html  overview-tree.html  package-search-index.js  packages  search.html  serialized-form.html  type-search-index.js
docs/java/apidocs/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html
docs/java/apidocs/com/spotify/voyager/: package-summary.html  package-tree.html  package-use.html
docs/java/apidocs/com/spotify/voyager/jni/: Index.QueryResults.html  Index.SpaceType.html  Index.StorageDataType.html  Index.html  StringIndex.QueryResults.html  StringIndex.html  package-summary.html  package-tree.html  package-use.html
docs/java/com/spotify/voyager/: package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/java/com/spotify/voyager/jni/: Index.QueryResults.html  Index.SpaceType.html  Index.StorageDataType.html  Index.html  StringIndex.QueryResults.html  StringIndex.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/java/com/spotify/voyager/jni/class-use/: Index.QueryResults.html  Index.SpaceType.html  Index.StorageDataType.html  Index.html  StringIndex.QueryResults.html  StringIndex.html
docs/java/com/spotify/voyager/jni/exception/: RecallException.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/java/com/spotify/voyager/jni/utils/: JniLibExtractor.html  TinyJson.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/python/: genindex.html  index.html  objects.inv  reference.html  search.html  searchindex.js
docs/python/_sources/: index.rst.txt
docs/python/_static/: documentation_options.js
java/: JavaInputStream.h  JavaOutputStream.h  Makefile  com_spotify_voyager_jni_Index.cpp  com_spotify_voyager_jni_Index.h  pom.xml  thread_pool.h
java/scripts/: compare_benchmarks.py
java/src/main/java/com/spotify/voyager/jni/: Index.java  (+2 more)
java/src/test/resources/: index-v2.hnsw  index.hnsw  names.json  test-vectors.json
nodejs/: .gitignore  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
nodejs/src/: voyager-node.cc  voyager-node.ts
nodejs/tests/: run_all_tests.ts  test_distances.ts  test_e4m3.ts  test_index_creation.ts  test_index_recreation.ts  test_load_indices.ts  tsconfig.json
python/: CMakeLists.txt  MANIFEST.in  README.md  bindings.cpp  dev-requirements.txt  multiquery.h  pyproject.toml  setup.py  speed_test.py  stubtest.allowlist  test-requirements.txt  tox.ini  typenames.h
python/docs/: objects.inv  py-modindex.html  searchindex.js
python/docs/_sources/: index.rst.txt
python/docs/_sources/reference/: voyager.rst.txt
python/docs/_static/: documentation_options.js
python/docs/reference/: voyager.html
python/docs/source/: conf.py  index.rst  reference.rst
python/scripts/: generate_type_stubs_and_docs.py  postprocess_type_hints.py
python/src/: PythonFileLike.h  PythonInputStream.h  PythonOutputStream.h  bindings.cpp  cpp
python/src/voyager/: __init__.py
python/tests/: __init__.py  test_distances.py  test_e4m3.py  test_index_creation.py  test_index_recreation.py  test_load_indices.py  test_stringindex.py
python/tests/indices/v0/: cosine_128dim_e4m3.hnsw  cosine_128dim_float32.hnsw  cosine_128dim_float8.hnsw  cosine_16dim_e4m3.hnsw  cosine_16dim_float32.hnsw  cosine_16dim_float8.hnsw  cosine_4dim_e4m3.hnsw  cosine_4dim_float32.hnsw  cosine_4dim_float8.hnsw  euclidean_128dim_e4m3.hnsw  euclidean_128dim_float8.hnsw  euclidean_4dim_float8.hnsw  innerproduct_128dim_float32.hnsw  innerproduct_16dim_e4m3.hnsw  innerproduct_16dim_float32.hnsw  innerproduct_16dim_float8.hnsw  innerproduct_4dim_e4m3.hnsw  innerproduct_4dim_float32.hnsw
python/tests/indices/v1/: cosine_128dim_e4m3.hnsw  cosine_128dim_float32.hnsw  cosine_128dim_float8.hnsw  cosine_16dim_e4m3.hnsw  cosine_16dim_float32.hnsw  cosine_16dim_float8.hnsw  cosine_4dim_e4m3.hnsw  cosine_4dim_float32.hnsw  cosine_4dim_float8.hnsw  euclidean_128dim_e4m3.hnsw  euclidean_128dim_float32.hnsw  euclidean_128dim_float8.hnsw  euclidean_16dim_e4m3.hnsw  euclidean_16dim_float32.hnsw  euclidean_16dim_float8.hnsw  euclidean_4dim_e4m3.hnsw  euclidean_4dim_float32.hnsw  euclidean_4dim_float8.hnsw  innerproduct_128dim_e4m3.hnsw  innerproduct_128dim_float32.hnsw  innerproduct_128dim_float8.hnsw  innerproduct_16dim_e4m3.hnsw  innerproduct_16dim_float32.hnsw  innerproduct_16dim_float8.hnsw  innerproduct_4dim_e4m3.hnsw  innerproduct_4dim_float32.hnsw  innerproduct_4dim_float8.hnsw
python/voyager/: __init__.py  __init__.pyi  bindings.cpp  stringindex.py  version.py
python/voyager-headers/: E4M3.h  Index.h  array_utils.h  hnswalg.h
python/voyager-headers/Spaces/: Space.h
(+37 files in other folders)
